--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,10 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+        <script
+      id="tmap-js-sdk"
+      src="https://apis.openapi.sk.com/tmap/jsv2?version=1&appKey=m7xfSEdGyNag30gLGFD8Z10WyLK2VTLQaUcK4jDc"
+    ></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
